bk_ida/gccida/c1/deallocate_reload_reg
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/deallocate_reload_reg/src/reload1.c:6474:17: error: expected expression
*( reload_type *)( v2 + 10314284), 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/deallocate_reload_reg/src/reload1.c:6474:4: error: use of undeclared identifier 'reload_type'; did you mean 'reload_order'?
*( reload_type *)( v2 + 10314284), 
   ^~~~~~~~~~~
   reload_order
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/deallocate_reload_reg/src/reload1.c:1652:14: note: 'reload_order' declared here
static short reload_order[MAX_RELOADS];
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/deallocate_reload_reg/src/reload1.c:6475:18: error: expected expression
*( machine_mode *)( v2 + 10314220)); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/deallocate_reload_reg/src/reload1.c:6475:4: error: use of undeclared identifier 'machine_mode'
*( machine_mode *)( v2 + 10314220)); 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/deallocate_reload_reg/src/obj/reload1.o] Error 1
